--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,4 +15,4 @@ jobs:
       - name: scp to host as only html files
         run: |
           sudo apt-get install sshpass -y
-          sshpass -p ${{ secrets.SERVER_PASSWORD }} scp -r . root@119.18.55.86:/var/www/html/git_hub_test/
+          sshpass -p ${{ secrets.PRACHESTA_SERVER_PASSWORD }} scp -r . root@119.18.55.86:/var/www/html/git_hub_test/
