--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: scp to host as only html files
-        uses: actions/sshpass-action@v2
+        uses: actions/checkout@v2
         with:
           host: ${{ secrets.PRACHESTA_IP }}
           port: 22
