--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: scp files
+name: copying complete html directory to /var/www
 on: [push]
 jobs:
 
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: copy file via ssh password
+    - name: copy html folder to prachesta
       uses: appleboy/scp-action@v0.1.4
       with:
         host: ${{ secrets.PRACHESTA_IP }}
